package org.example;
/**
 * Clase principal de la aplicación.
 *
 * Contiene el método main, que inicia el programa.
 */
public class AppEcommerce {
    /**
     * Método que inicia el programa.
     *
     * @param args argumentos de entrada.
     */
    public static void main(String[] args) {
        Tienda.iniciarPago();

    }
}
